Fix buttons touching when they wrap

--- a/less/moodle/buttons.less
+++ b/less/moodle/buttons.less
@@ -4,6 +4,7 @@
     display: inline-block;
     margin-left: 5px;
     margin-right: 5px;
+    margin-bottom: 5px;
 }
 .singlebutton form {
     margin: 0;
